# gemini-sre-agent

./: .gitignore  Dockerfile  GEMINI.md  README.md  deploy.sh  main.py  pyproject.toml  pyrightconfig.json  qodo.md
.github/workflows/: cov.yaml  deploy.yml
bootstrap-docs/: Gemini Agent for Cloud Log Monitoring.md  High-Level Technical Design_ gemini-cloud-log-monitor.md  Logging Guide for Jimini.md  Product Requirements Document (PRD)_ gemini-cloud-log-monitor.md  Resilience Guide for Jimini.md  System Description Document_ gemini-cloud-log-monitor.md
config/: config.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  ENHANCED_PROMPT_GENERATION.md  ENVIRONMENTS.md  GCP_SETUP.md  INFRASTRUCTURE.md  LOGGING.md  ML_PATTERN_REFINEMENT.md  OPERATIONS.md  PERFORMANCE.md  QUICKSTART.md  SECURITY.md  SETUP_INSTALLATION.md  TROUBLESHOOTING.md
gemini_sre_agent/: analysis_agent.py  config.py  log_ingestion.py  log_subscriber.py  logger.py  pattern_detector.py  remediation_agent.py  resilience.py  triage_agent.py
gemini_sre_agent/ml/: adaptive_prompt_strategy.py  adaptive_rate_limiter.py  base_prompt_template.py  code_analysis_models.py  code_context_extractor.py  cost_config.py  cost_statistics.py  cost_tracker.py  drift_detector.py  enhanced_analysis_agent.py  error_analyzer.py  few_shot_manager.py  gemini_api_client.py  gemini_enhanced_pattern_detector.py  gemini_pattern_classifier.py  gemini_prompt_engine.py  gemini_response_cache.py  historical_analyzer.py  log_quality_validator.py  log_sanitizer.py  meta_prompt_generator.py  performance_config.py  (+11 more)
infra/: gcloud_setup.sh
tests/: test_adaptive_rate_limiter.py  test_analysis_agent.py  test_base_prompt_template.py  test_code_context_extractor.py  test_cost_tracker.py  test_enhanced_analysis_agent.py  test_few_shot_manager.py  test_gemini_api_client.py  test_gemini_enhanced_pattern_detector.py  test_gemini_pattern_classifier.py  test_gemini_prompt_engine.py  test_gemini_response_cache.py  test_log_ingestion.py  test_log_quality_validator.py  test_log_sanitizer.py  test_log_subscriber.py  test_model_performance_monitor.py  test_pattern_context_extractor.py  test_pattern_detector.py  test_prompt_context_models.py  test_prompt_utils.py  test_remediation_agent.py  test_resilience.py  test_specialized_prompt_templates.py  test_triage_agent.py
(+29 files in other folders)
